fix(content-block-segmented): spacing adjustments

--- a/packages/web-components/src/components/content-block-segmented/content-block-segmented.scss
+++ b/packages/web-components/src/components/content-block-segmented/content-block-segmented.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2020, 2023
+// Copyright IBM Corp. 2020, 2024
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -32,20 +32,12 @@
   }
 }
 
-:host(#{$c4d-prefix}-content-block-segmented-item) ::slotted(*) {
-  margin-inline: $spacing-05;
-}
-
 // TODO: Consider applying this rule in general
 :host(#{$c4d-prefix}-content-block-segmented-item) {
   ::slotted(#{$c4d-prefix}-content-item-copy) {
     @include breakpoint(md) {
       inline-size: calc((100% - 2 * #{$spacing-05}) * 0.9);
     }
-  }
-
-  ::slotted([slot='footer']) {
-    margin-block-start: $spacing-07;
   }
 }
 
